Changelog for mk-table-sync:

   * --replicate caused chunking parameters to be ignored (issue 996).
   * Connections did not preserve server SQL modes (issue 801).

2010-05-03: version 1.0.27

   * Added --[no]hex-blob to HEX() BLOB data by default (issue 641).
   * Tool crashed on MySQL 4.0 due to "SHOW GRANTS" (issue 285).

2010-04-01: version 1.0.26

   * --trim caused impossible WHERE and invalid SQL (issue 965).
   * Tool crashed using --ask-pass if no DSN h part was specified (issue 947).
   * Added DSN OPTIONS section to POD (issue 55).

2010-03-01: version 1.0.25

   * Row-based replication prevented some changes (issue 95).
   * Added --bidirectional (issue 464).
   * Added --conflict-column for bidirectional sync (issue 464).
   * Added --conflict-comparison for bidirectional sync (issue 464).
   * Added --conflict-value for bidirectional sync (issue 464).
   * Added --conflict-threshold for bidirectional sync (issue 464).
   * Added --conflict-error for bidirectional sync (issue 464).

2010-02-01: version 1.0.24

   * Nibble did not case-insensitively check its index (issue 804).

2010-01-06: version 1.0.23

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-12-02: version 1.0.22

   * Added note to output when using --dry-run (issue 691).

2009-10-30: version 1.0.21

   * Fixed an infinite loop with the Nibble algorithm (issue 644).
   * Nibble could fail to sync small tables (issue 634).
   * --set-vars did not work (issue 597).
   * Column order was not preserved in SQL statments (issue 371).
   * GroupBy and Stream algorithms did not reset after first table (issue 631).
   * Command line options did not override config file options (issue 617).

2009-10-01: version 1.0.20

   * --replicate did not work.

2009-09-30: version 1.0.19

   * Fixed an infinite loop with the Nibble algorithm (issue 96).
   * Fixed incorrect INSERT values (issue 616).
   * Changed --algorithm to --algorithms and changed what it does.