@@ -1,6 +1,7 @@
 Changelog for mk-table-sync:
 
    * --replicate caused chunking parameters to be ignored (issue 996).
+   * "0x" was used instead of "" for empty blob and text values (issue 1052).
    * Connections did not preserve server SQL modes (issue 801).
 
 2010-05-03: version 1.0.27
